added category edit feature
